Simple splash screen

--- a/FindMeARoom/Base.lproj/LaunchScreen.storyboard
+++ b/FindMeARoom/Base.lproj/LaunchScreen.storyboard
@@ -16,13 +16,26 @@
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Room Finder" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Vmt-IF-vvI">
+                                <rect key="frame" x="192.5" y="120" width="215" height="43"/>
+                                <animations/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="36"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <animations/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="Vmt-IF-vvI" firstAttribute="top" secondItem="Llm-lL-Icb" secondAttribute="bottom" constant="100" id="elx-el-qql"/>
+                            <constraint firstItem="Vmt-IF-vvI" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="ki7-aB-D9K"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="53" y="375"/>
+            <point key="canvasLocation" x="53" y="411"/>
         </scene>
     </scenes>
 </document>
